experimental/ir/testdata/tags/allow_alias.proto.stderr.txt
error: enum value `0` used more than once
  --> testdata/tags/allow_alias.proto:7:10
   |
 6 |     A1 = 0;
   |          - previously used here
 7 |     B1 = 0;
   |          ^ used here

error: `allow_alias` requires at least one aliasing enum value
  --> testdata/tags/allow_alias.proto:17:12
   |
17 |     option allow_alias = true;
   |            ^^^^^^^^^^^^^^^^^^

encountered 2 errors
